Fix: Tweak spacings and heights

--- a/assets/stylesheets/site.css
+++ b/assets/stylesheets/site.css
@@ -575,13 +575,12 @@ p, ul, li{
   letter-spacing: 0.2rem;
 }
 
-.post {
-  padding-left: 8px;
+.pre {
   padding-right: 8px;
 }
 
-.pre {
-  padding-right: 8px;
+.post {
+  padding-left: 8px;
 }
 
 .mail {
@@ -625,7 +624,8 @@ p, ul, li{
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .window {
   overflow: hidden;
-  height: 22px;
+  height: 19px;
+  height: 1.9rem;
   border-bottom: 3px solid #FF6A5C;
   display: inline-block;
 }
@@ -640,7 +640,8 @@ p, ul, li{
 
 .options__item {
   margin: 0;
-  line-height: 2.0rem;
+  line-height: 18px;
+  line-height: 1.8rem;
 }
 
 
@@ -689,14 +690,17 @@ p, ul, li{
 
 @media (min-width: 315px) {
   .welcome__about {
+    font-size: 20px;
     font-size: 2.0rem;
   }
 
   .window {
     height: 22px;
+    height: 2.2rem;
   }
 
   .options__item {
+    line-height: 22px;
     line-height: 2.2rem;
   }
 }
@@ -705,6 +709,7 @@ p, ul, li{
 @media (min-width: 400px) {
   .family_photo {
     min-height: 450px;
+    min-height: 45rem;
   }
   
   .welcome__greeting {
@@ -712,15 +717,18 @@ p, ul, li{
   }
 
   .welcome__about {
+    font-size: 26px;
     font-size: 2.6rem;
   }
 
   .window {
-    height: 26px;
+    height: 30px;
+    height: 3.0rem;
   }
 
   .options__item {
-    line-height: 2.8rem;
+    line-height: 30px;
+    line-height: 3.0rem;
   }
 }
 
@@ -733,16 +741,27 @@ p, ul, li{
     margin-bottom: 20px;
   }
 
+  .pre {
+    padding-right: 12px;
+  }
+
+  .post {
+    padding-left: 12px;
+  }
+
   .welcome__about {
+    font-size: 32px;
     font-size: 3.2rem;
   }
 
   .window {
-    height: 32px;
+    height: 36px;
+    height: 3.6rem;
   }
 
   .options__item {
-    line-height: 3.4rem;
+    line-height: 36px;
+    line-height: 3.6rem;
   }
 }
 
@@ -766,47 +785,42 @@ p, ul, li{
   }
 
   .welcome__about {
+    font-size: 20px;
     font-size: 2.0rem;
   }
 
   .window {
     height: 22px;
+    height: 2.2rem;
   }
 
   .options__item {
+    line-height: 22px;
     line-height: 2.2rem;
   }
 }
 
 @media (min-width: 660px) and (orientation: portrait) {
   .welcome__about {
+    font-size: 38px;
     font-size: 3.8rem;
   }
 
   .window {
-    height: 38px;
+    height: 44px;
+    height: 4.4rem;
   }
 
   .options__item {
-    line-height: 4.2rem;
+    line-height: 44px;
+    line-height: 4.4rem;
   }
 }
 
 @media (min-width: 660px) and (orientation: landscape) {
   .family_photo {
     min-width: 320px;
-  }
-
-  .welcome__about {
-    font-size: 2.0rem;
-  }
-
-  .window {
-    height: 22px;
-  }
-
-  .options__item {
-    line-height: 2.2rem;
+    min-width: 32rem;
   }
 }
 
@@ -819,45 +833,64 @@ p, ul, li{
 
   .window, .full, .pre, .post {
     margin-bottom: 30px;
+    margin-bottom: 3.0rem;
   }
-  
+
+  .pre {
+    padding-right: 16px;
+  }
+
+  .post {
+    padding-left: 16px;
+  }
+
   .welcome__greeting {
+    font-size: 28px;
     font-size: 2.8rem;
   }
 
   .welcome__about {
+    font-size: 44px;
     font-size: 4.4rem;
   }
 
   .window {
     height: 44px;
+    height: 4.4rem;
   }
 
   .options__item {
+    line-height: 48px;
     line-height: 4.8rem;
   }
 
   .mail {
     height: 62px;
+    height: 6.2rem;
     width: 68px;
+    width: 6.8rem;
   }
 }
 
 @media (min-width: 750px) and (orientation: landscape) {
   .welcome__greeting {
+    font-size: 22px;
     font-size: 2.2rem;
   }
 
   .welcome__about {
+    font-size: 26px;
     font-size: 2.6rem;
   }
 
   .window {
-    height: 26px;
+    height: 30px;
+    height: 3.0rem;
   }
 
   .options__item {
-    line-height: 2.8rem;
+    line-height: 30px;
+    line-height: 3.0rem;
   }
 
 }
@@ -870,21 +903,34 @@ p, ul, li{
 
   .window, .full, .pre, .post {
     margin-bottom: 20px;
+    margin-bottom: 2.0rem;
+  }
+
+  .pre {
+    padding-right: 14px;
+  }
+
+  .post {
+    padding-left: 14px;
   }
 
   .welcome__greeting {
+    font-size: 28px;
     font-size: 2.8rem;
   }
 
   .welcome__about {
-    font-size: 3.6rem;
+    font-size: 34px;
+    font-size: 3.4rem;
   }
 
   .window {
-    height: 36px;
+    height: 40px;
+    height: 4.0rem;
   }
 
   .options__item {
+    line-height: 40px;
     line-height: 4.0rem;
   }
 }
@@ -894,27 +940,42 @@ p, ul, li{
 
   .window, .full, .pre, .post {
     margin-bottom: 30px;
+    margin-bottom: 3.0rem;
+  }
+
+  .pre {
+    padding-right: 18px;
+  }
+
+  .post {
+    padding-left: 18px;
   }
 
   .welcome__greeting {
+    font-size: 38px;
     font-size: 3.8rem;
   }
 
   .welcome__about {
+    font-size: 46px;
     font-size: 4.6rem;
   }
 
   .window {
-    height: 46px;
+    height: 52px;
+    height: 5.2rem;
   }
 
   .options__item {
-    line-height: 4.8rem;
+    line-height: 54px;
+    line-height: 5.4rem;
   }
 
   .mail {
     height: 62px;
+    height: 6.2rem;
     width: 68px;
+    width: 6.8rem;
   }
 }
 
